--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@ html {
 	background-image: var(--background-image);
 	background-position: center top;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: auto 100lvh;
 	background-attachment: fixed;
 	margin: 0;
 
